Tests/CompilerTests/negative/illegal-memberwise-init.hylo
//! no-std

enum E {
  memberwise init
}

trait P {
  memberwise init
}

extension Void {
  memberwise init
}

given Void is P {
  memberwise init
}
